# study-mcp-host-with-gradio

./: .env.example  README.md  app.py  main.py  pyproject.toml
server/: mcp_disk_usage.py  mcp_os_name.py
